--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -14,7 +14,7 @@
                 <i class="material-icons">account_circle</i>
                 Contas
             </a>
-            <a mat-list-item >
+            <a mat-list-item (click)="logout()">
                 <i class="material-icons">logout</i>
                 Logout
             </a>
